@@ -1,10 +1,11 @@
-2010-08-20 Max Derhak
+2010-08-23 Max Derhak
  * 1.6.1 release
  * Modifications to CIccTagLut16 and CIccTagLut8 to correctly track curve mapping when table
    is used as an output table and PCS is XYZ.  In this case M and B curves are swapped since
    the legacy Lut16 and Lut8 tags do not have M curves.
  * Removed check in CIccXform::Create() for BtoD0/DtoB0 tags if BtoDx/DtoBx tag for rendering
    intent not found (as this never made it into the approved specification).
+ * Further changes from Joseph Goldstone to eliminate various compiiler warnings
  
 2010-07-28 Max Derhak
  * 1.6.0 release
